--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
-    <Title>Task</Title>
+    <meta https-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
     
-    <title>React App</title>
+    <title>Task</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
